lintian-brush (0.65) UNRELEASED; urgency=medium

  * Explicitly set vendor when running tests; fixes tests running on
    Ubuntu. Closes: #960832
  * Don't just strip whitespace from license paragraphs in copyright-
    refers-to-symlink-license.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 17 May 2020 14:06:16 +0000

lintian-brush (0.64) unstable; urgency=medium

  [ Jelmer Vernooĳ ]
  * Only check GitHub repository for moved repository info if it is set.

  [ Sandro Knauß ]
  * Add fixer for license-file-listed-in-debian-copyright.

  [ Jelmer Vernooĳ ]
  * Read dh commands from the lintian files.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 16 May 2020 14:33:36 +0000

lintian-brush (0.63) unstable; urgency=medium

  * Clean up unnecessary 'dh_missing --fail-missing' when upgrading to
    debhelper 13. Closes: #959823
  * Add document start when adding new YAML files. Closes: #958413
  * Check Debian bugs when correcting Close => Closes.
  * debian-changelog-file-contains-obsolete-user-emacs-settings: Only
    remove add-log-mailing-address, not mode lines.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Wed, 06 May 2020 20:09:03 +0000

lintian-brush (0.62) unstable; urgency=medium

  [ Jelmer Vernooij ]
  * Bump maximum debhelper compat version in sid to 13. Closes: #958775
  * Handle old style freedesktop git URLs with /git/ prefix.
  * Don't remove name/contact from upstream metadata if different from
    copyright. Closes: #948948
  * Extract Git repository URLs from debian/watch in git mode.
  * Add fixer for uses-deprecated-adttmp.
  * Downgrade the certainty for some upstream URLs, unless they can be
    verified in some way.

  [ Niels Thykier ]
  * Migrate tmpfile to tmpfiles when upgrading to compat 13.

  [ Jelmer Vernooĳ ]
  * debian-changelog-line-too-long: Be careful about joining lines that
    aren't too long in entries that do have long lines. Closes: #959496
  * debian-source-options-has-custom-compression-settings: Don't break