@@ -4,6 +4,8 @@ lintian-brush (0.65) UNRELEASED; urgency=medium
     Ubuntu. Closes: #960832
   * Don't just strip whitespace from license paragraphs in copyright-
     refers-to-symlink-license.
+  * Improve detection of packages that use gbp-dch by also scanning
+    their history for behaviour around gbp dch.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 17 May 2020 14:06:16 +0000
 
